BuildHughes/translation-tool/inputs/source_meta/objects/Communication_Address_Detail__mdt.object
<CustomObject>
    <description>Used in Lightning component to Update Account- Billing Address</description>
    <fields>
        <fullName>Field_Set_Name__c</fullName>
        <label>Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <label>Instance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <description>This field will have the name of the object for which this section is.</description>
        <label>SObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Communication Address Detail</label>
    <pluralLabel>Communication Address Detail</pluralLabel>
</CustomObject>